tests/v0-fail/repeat.out
Running <root>/repeat.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern literal at line <root>/repeat.cli:5 does not match output line "hello"
matching Sequence([Repeat("goodbye"), End])
  matching Repeat("goodbye")
    matching "goodbye"
    FAILED match: "hello"

❌ FAIL

<root>/repeat.cli FAILED
Error: pattern literal at line <root>/repeat.cli:5 does not match output line "hello"

